--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -3,17 +3,17 @@ version: "3"
 tasks:
   default: task --list
 
+  dry-clean:
+    aliases: ["dc"]
+    desc: Prints what would be deleted by "clean"
+    cmds:
+    - sl clean --print --ignored --files --dirs --exclude=test/media/*.{mkv,mp4}
+
   clean:
     aliases: ["c", "purge"]
     desc: Cleans the repo
     cmds:
-    - sl clean --ignored --exclude=test/media/*.mkv
-
-  vendor:
-    aliases: ["import"]
-    desc: Vendors third-party code
-    cmds:
-    - go mod vendor
+    - sl clean --ignored --files --dirs --exclude=test/media/*.{mkv,mp4}
 
   build:
     aliases: ["b", "materialize"]
@@ -21,4 +21,12 @@ tasks:
     deps:
     - clean
     cmds:
-    - go build -C cmd/sonarr-subtitle-merge -o out/
+    - go build -C cmd/sonarr-subtitle-merge
+
+  test:
+    aliases: ["t"]
+    desc: Run tests
+    deps:
+    - build
+    cmds:
+    - scripts/test-sonarr-subtitle-merge
