--- a/sonarr-script/Dockerfile
+++ b/sonarr-script/Dockerfile
@@ -8,3 +8,4 @@ FROM alpine:latest
 RUN apk add --no-cache ffmpeg
 COPY --from=builder /usr/local/cargo/bin/sonarr-script /usr/local/bin/sonarr-script
 CMD ["sonarr-script"]
+LABEL org.opencontainers.image.source https://github.com/pbar1/arr-scripts
