--- a/sonarr-script/Cargo.toml
+++ b/sonarr-script/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2024"
 [dependencies]
 anyhow = "1"
 aspasia = "0.2"
+camino = "1.2.0"
 clap = { version = "4", features = ["derive", "env"] }
 dialoguer = "0.11"
+lingua = "1.7.2"
 regex = "1"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
